2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/27_ifThenelse_cond_eq.deca
// Description :
//     Test sur ifThenelse    
// Resultats :
//    Valide 
//
// Historique :
// cree le 01/01/2024
{
    int x ;
    if(1==2)
    {
        x = 3 ;
    }
    else 
    {
        x = 2 ;
    }
}