2A/05_Projet_GL/src/test/deca/context/invalid/complet/48_casting_int_bool.deca
// Description :
//   casting : int -> boolean
// Resultats :
//    ligne 9 :  casting entre 'boolean' et 'int' n'est pas possible
// Historique :
//  cree le 16/01/2024

{
    (boolean)(1);
}